# RVO2_ROS

./: .gitmodules  README.md
rvo2/: ROS学习RVO2之orca_pkg代码解读.md  RVO2代码解读.md  geometry_msgs.md
simulator_ROS/doc/orca_8/: data_orca01.txt  uav1-position_agent8.txt  uav2-position_agent8.txt  uav3-position_agent8.txt  uav4-position_agent8.txt  uav5-position_agent8.txt  uav6-position_agent8.txt  uav7-position_agent8.txt  uav8-position_agent8.txt
simulator_ROS/src/control/: CMakeLists.txt
simulator_ROS/src/control/launch/: uav.launch  uav2.launch  uav_try.launch
simulator_ROS/src/control/src/: control1.cpp  control2.cpp  control3.cpp  control4.cpp  control5.cpp  control6.cpp  (+2 more)
simulator_ROS/src/orca_pkg/: CMakeLists.txt  package.xml
simulator_ROS/src/orca_pkg/include/orca/: Agent.h  Definitions.h  KdTree.h  ORCA_API.h  RVOSimulator.h  UAV_STATE.h  orca.h
simulator_ROS/src/orca_pkg/include/orca_pkg/: msg_base.h  qrotor_control_interface.h  qrotor_control_orca_impl.h
simulator_ROS/src/orca_pkg/src/: act_orca_test.cpp
simulator_ROS/src/orca_pkg/src/orca/: Agent.cpp  KdTree.cpp  ORCA_API.cpp  RVOSimulator.cpp  orca.cpp  qrotor_control_orca_impl.cpp
simulator_python/: data_orca.txt  data_orca5.txt  data_orca8.txt  orca.py  uav1-position_agent5.txt  uav1-position_agent8.txt  uav2-position_agent5.txt  uav2-position_agent8.txt  uav3-position_agent5.txt  uav3-position_agent8.txt  uav4-position_agent5.txt  uav4-position_agent8.txt  uav5-position_agent5.txt  uav5-position_agent8.txt  uav6-position_agent8.txt  uav7-position_agent8.txt  uav8-position_agent8.txt
